Fixed Visibility : Front Page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -311,3 +311,9 @@ body {
   border-radius: 26px;
 }
 
+.darken-bg {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.28);
+}
+
